# Rustromo

./: .gitignore  LICENSE  README.md
godot/: Berthold City Light Regular.otf.import  CRT.gdshader  Helloworld.gdextension  bg_switch.gd  g992.png.import  icon.svg.import  map_background.gd  panel_theme.tres  project.godot  rect1016.png.import  sprite_2d.tscn  test.gd  test_map.png.import  test_map.svg.import
godot/bg_frames/: 0001.png.import  0002.png.import  0003.png.import  0004.png.import  0005.png.import  0006.png.import  0007.png.import  0008.png.import  0009.png.import  0010.png.import  0011.png.import  0012.png.import  0013.png.import
rust/: Cargo.toml
rust/src/: gameplay.rs  items.rs  lib.rs  map.rs  objectives.rs  player.rs
