[package]
name = "rust_project"
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = "0.2.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"